Fixed projects section on mobile

--- a/projects.css
+++ b/projects.css
@@ -24,6 +24,8 @@
 .project-desc {
     font-size: 16px;
     text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .project-list {
@@ -53,7 +55,7 @@
 
 .collapsible {
     outline: none;
-    width: 95%;
+    width: 100%;
     height: 150px;
     cursor: pointer;
 
